force-app/main/default/objects/Shift_Configuration__mdt/Shift_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>Shift Configuration</label>
    <pluralLabel>Shift Configurations</pluralLabel>
</CustomObject>