force-app/main/default/objects/Shift_Configuration__mdt/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <description>Shift end time in HH:mm format (24-hour)</description>
    <label>End Time</label>
    <length>5</length>
    <required>true</required>
    <type>Text</type>
</CustomField>