force-app/main/default/objects/Shift_Configuration__mdt/fields/Shift_Name__c.field-meta.xml
<CustomField>
    <fullName>Shift_Name__c</fullName>
    <label>Shift Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>