force-app/main/default/objects/Shift_Configuration__mdt/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <description>Shift start time in HH:mm format (24-hour)</description>
    <label>Start Time</label>
    <length>5</length>
    <required>true</required>
    <type>Text</type>
</CustomField>